# language_training

./: README.md  main.py  pyproject.toml  read_out_loud.py
.github/workflows/: pylint.yml
data/: apartment.toml  apparel.toml  body_parts.toml  colors.toml  conjugation.toml  facilities.toml  general.toml  greetings.toml  hotel.toml  medical.toml  numbers.toml  ordinals.toml  outdoor.toml  restaurant.toml  time.toml  traffic.toml  verbs.toml  weather.toml  wildlife.toml
