[project]
name = "language-training"
version = "0.1.0"
description = "Some tools to perform language trainings."
authors = [
    {name = "Oliver Merkel", email = "Merkel.Oliver@web.de"},
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.13"
dependencies = [
    "gtts>=2.5.4",
    "pygame>=2.6.1",
    "toml>=0.10.2",
    "types-toml>=0.10.8.20240310",
]
